# nebius

./: .gitignore  VIDEO_TO_CODE_INTEGRATION.md  package.json
api/: .gitignore  DEPLOYMENT.md  README.md  pyproject.toml  verify.py
api/src/frame_extractor/: __init__.py  archive.py  context_builder.py  extractor.py  image_analyzer.py  main.py  parser.py  plan_generator.py  prompts.py  providers.py  similarity.py  stitcher.py  vision.py
api/tests/: test_api.py
web/: .env  .env.example  .gitignore  package.json  pnpm-lock.yaml
web/src/app/: README.md  globals.css  layout.tsx  page.tsx
web/src/app/api/result/: route.ts
web/src/app/api/upload/: route.ts
web/src/app/api/upload-progress/[uploadId]/: route.ts
web/src/app/api/upload-start/: route.ts
web/src/app/api/upload-stream/: route.ts
web/src/app/api/write-code/: route.ts
web/src/app/chat/: page.tsx
web/src/app/status/: page.tsx
web/src/helpers/: constants.ts  iframe-dev.ts
